# serbytes

./: Cargo.toml  LICENSE  README.md
.run/: Docs.run.xml
macros/ser_bytes_derive/src/: lib.rs
macros/ser_bytes_derive/src/derive/: enum_derive.rs  struct_derive.rs
macros/ser_bytes_derive/src/derive/shared/: mod.rs  named_fields.rs  unnamed_fields.rs
ser_bytes_derive/: Cargo.toml
ser_bytes_derive/src/: lib.rs
ser_bytes_derive/src/derive/: enum_derive.rs  mod.rs  shared.rs  struct_derive.rs
ser_bytes_derive/src/derive/shared/: mod.rs  named_fields.rs  unnamed_fields.rs
src/: byte_tag.rs  bytebuffer.rs  fs.rs  json_like.rs  lib.rs  mapped.rs  prelude.rs  ser_bytes_impl.rs  ser_bytes_impl_macro.rs  ser_trait.rs  size.rs  size_hint.rs
src/bytebuffer/: mod.rs  read.rs  read_macro.rs  write.rs  write_macro.rs
src/bytebuffer/read/: bb_owned.rs  bb_peek.rs  bb_ref.rs  bb_ref_mut.rs  bb_slice.rs  mod.rs  owned.rs  read_error.rs  read_macro.rs
src/bytebuffer/write/: bb_ref.rs  mod.rs  owned.rs
src/json_like/: mod.rs
src/ser_bytes_impl/: block.rs  box_impl.rs  cow.rs  deref_types.rs  duration.rs  json_like.rs  mapped.rs  may_not_exist.rs  mod.rs  option.rs  result.rs  ser_bytes_impl_macro.rs  sized_block.rs  skip_ser.rs  versioning_wrapper.rs
src/ser_bytes_impl/collections/: hashmap.rs  mod.rs  string.rs  vec_like.rs
src/ser_bytes_impl/glam/: mod.rs  vec_macro.rs
src/ser_bytes_impl/simple_id/: mod.rs
tests/: bb.rs  implementations.rs  ser_derive.rs
