[package]
name = "serbytes"
version = "0.1.0"
edition = "2024"

[dependencies]
bytebuffer = "2.3.0"
bytes = "1.10.1"
glam = "0.30.8"
hashbrown = "0.16.0"
paste = "1.0.15"
ser_bytes_derive = {path = "./ser_bytes_derive"}
serde = { version = "1.0.228", optional = true }

[features]
serde = ["dep:serde"]
