[package]
name = "serbytes"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
glam = { version = "0.32.1", optional = true }
paste = "1.0.15"
ser_bytes_derive = { path = "./macros/ser_bytes_derive" }
simple_id = { git = "https://github.com/ltsoveranakin/simple_id.git", optional = true }

[features]
glam = ["dep:glam"]
simple_id = ["dep:simple_id"]